# GeoDumbMail

./: .gitignore  CHANGELOG.md  LICENSE  README.md  emails.db  manage.py  profile_server.sh  pyproject.toml  start_server.sh  test_mail.py
.forgejo/workflows/: ci.yml  test-runner.yml
GeoDumbMail/: asgi.py  settings.py  urls.py  wsgi.py
emails/: __init__.py  admin.py  apps.py  fields.py  models.py  signals.py  tests.py  urls.py  utils.py  views.py
emails/management/commands/: elimina_immagini_orfane.py
emails/migrations/: 0001_initial.py  0002_alter_emaildata_city.py  0002_remove_emaildata_show_image_and_more.py  0003_alter_emaildata_city_alter_emaildata_image_file.py  0003_emaildata_show_image_emaildata_show_map.py  0004_alter_emaildata_image_file.py  0004_remove_emaildata_show_image_and_more.py  0005_alter_emaildata_image_file_alter_emaildata_typo.py  0005_emaildata_status.py  0006_alter_emaildata_typo.py  0006_emaildata_typo.py  0007_alter_emaildata_image_url_alter_emaildata_typo.py  0007_emaildata_user_id.py  0008_alter_emaildata_user_id.py  0009_alter_emaildata_user_id.py  0010_alter_emaildata_user_id.py  0011_alter_emaildata_image_id.py  0012_emaildata_status_int.py  0013_auto_20260507_0700.py  0014_auto_20260507_0815.py  0015_alter_emaildata_image_id.py  0016_alter_emaildata_image_id.py
emails/templates/emails/: email_list.html  email_list__.html  update_in_progress.html  ììè'ì+èpoèpòàòlpàoi
media/uploaded_images/: UTF-8bSlBFR18yMDI0MDgyN18xMzI1NDFfQnJlc2NpYV9HaWFyZGlub19QdWJibGljb19WaWFfQW_I1MgFH3
