[tool.poetry]
name = "geodumbmail"
version = "0.1.0"
description = "Temporary frontend for maps.citylog.cloud"
authors = ["orfeo321 <revego@code4you.cloud>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.2"
asgiref = "3.8.1"
django = "5.1"
pillow = "10.4.0"
psycopg2-binary = "2.9.9"
sqlparse = "0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
