[tool.poetry]
name = "geodumbmail"
version = "0.1.0"
description = "Temporary frontend for maps.citylog.cloud"
authors = ["orfeo321 <revego@code4you.cloud>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.2"
asgiref = "3.8.1"
django = "5.1"
pillow = "10.4.0"
psycopg2-binary = "2.9.9"
sqlparse = "0.5.1"
certifi = "^2024.8.30"
requests = "^2.32.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-django (>=4.12.0,<5.0.0)",
    "coverage (>=7.13.5,<8.0.0)"
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "GeoDumbMail.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
norecursedirs = ["django-custom-storage"]
